fixed z-indexes for owl navigation and addToBasket on category item

--- a/resources/scss/ceres/plugins/_owl-carousel.scss
+++ b/resources/scss/ceres/plugins/_owl-carousel.scss
@@ -10,7 +10,6 @@
 .owl-carousel {
     /* position relative and z-index fix webkit rendering fonts issue */
     position: relative;
-    z-index: 1;
     display: none;
     width: 100%;
     -webkit-tap-highlight-color: transparent;
@@ -44,6 +43,10 @@
                 color: $primary;
             }
         }
+    }
+
+    .owl-dots {
+        z-index: 2;
     }
 
     .owl-single-item-control {
