--- a/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
@@ -79,6 +79,11 @@
         padding: 0 .8rem;
         vertical-align: top;
         background-color: $white;
+
+        /* addToBasket */
+        .btn {
+            z-index: 1;
+        }
     }
 
     .price {
